# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x16at8Rs-bdgejy0Ni62BTub-xQpFDrPi6PaNCcQ7Nn9l4=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16xmz967MLiXTNH-Oot0nWWm-8BmpaucEAOMwgKr_baJQw=',
      'err': 0,
    }),
  ])
# ---
